--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geometry-Genius</title>
+    <!-- css frameworks  -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@2.50.1/dist/full.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 
 <body>
+    <header>
+        <!-- navbar -->
+        <div class="navbar w-[80%] bg-cyan-50 mx-auto mt-8 rounded-lg py-4 px-6">
+            <div class="navbar-start">
+                <a class="font-bold text-4xl">Interactive<span class="font-medium text-slate-600	"><br>Geometry
+                        Genius</span></a>
+            </div>
+            <div class="navbar-end">
+                <a class="btn btn-info px-8 font-4xl font-semibold text-white">Blog</a>
+            </div>
+        </div>
+    </header>
 
+
+    <!-- ! Javascript linked  -->
 </body>
 
 </html>
