--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <main>
         <section class="mt-10 px-10">
             <!-- Geometry section  -->
-            <div class="grid grid-cols-4">
+            <div class="grid grid-cols-3 gap-4 w-[70%]">
+                <!-- ! triangle  -->
                 <div class="card w-full bg-base-100 border border-lg px-10 py-8">
                     <figure><img src="./images/triangle.png" class="h-40 w-60" alt="triangle" /></figure>
                     <div class="card-body text-center">
@@ -40,6 +41,75 @@
                         <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="b">
                         <span class="px-2">cm</span>
                         <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="h">
+                    </div>
+                    <button class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
+                </div>
+                <!-- ! rectangle  -->
+                <div class="card w-full bg-base-100 border border-lg px-10 py-8">
+                    <figure><img src="./images/rectangle.png" class="h-40 w-60" alt="Parallelogram" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="font-bold text-2xl">Rectangle</h2>
+                        <p>Area (A) = w &#215; l</p>
+                    </div>
+                    <div class="text-center mb-8">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="w">
+                        <span class="px-2">cm</span>
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="l">
+                    </div>
+                    <button class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
+                </div>
+                <!-- ! Parallelogram  -->
+                <div class="card w-full bg-base-100 border border-lg px-10 py-8">
+                    <figure><img src="./images/parallelogram.png" class="h-40 w-60" alt="Parallelogram" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="font-bold text-2xl">Parallelogram</h2>
+                        <p>Area (A) = b &#215; h</p>
+                    </div>
+                    <div class="text-center mb-8">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="b">
+                        <span class="px-2">cm</span>
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="h">
+                    </div>
+                    <button class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
+                </div>
+                <!-- ! Rhombus  -->
+                <div class="card w-full bg-base-100 border border-lg px-10 py-8">
+                    <figure><img src="./images/rhombus.png" class="h-40 w-60" alt="Rhombus" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="font-bold text-2xl">Rhombus</h2>
+                        <p>Area (A) = 0.5 &#215; b &#215; h</p>
+                    </div>
+                    <div class="text-center mb-8">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="b">
+                        <span class="px-2">cm</span>
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="h">
+                    </div>
+                    <button class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
+                </div>
+                <!-- ! Pentagon -->
+                <div class="card w-full bg-base-100 border border-lg px-10 py-8">
+                    <figure><img src="./images/pentagon.png" class="h-40 w-60" alt="Pentagon" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="font-bold text-2xl">Pentagon</h2>
+                        <p>Area (A) = p &#215; b</p>
+                    </div>
+                    <div class="text-center mb-8">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="p">
+                        <span class="px-2">cm</span>
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="b">
+                    </div>
+                    <button class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
+                </div>
+                <div class="card w-full bg-base-100 border border-lg px-10 py-8">
+                    <figure><img src="./images/ellipse.png" class="h-40 w-60" alt="Ellipse" /></figure>
+                    <div class="card-body text-center">
+                        <h2 class="font-bold text-2xl">Ellipse</h2>
+                        <p>Area (A) = &Pi; &#215; a &#215; b</p>
+                    </div>
+                    <div class="text-center mb-8">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="a">
+                        <span class="px-2">cm</span>
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="b">
                     </div>
                     <button class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
                 </div>
