some common function like validation showing data and rectangular handler added

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                         <p>Area (A) = w &#215; l</p>
                     </div>
                     <div class="text-center mb-8">
-                        <input id="rectangle-width" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text"
+                        <input id="rectangle-width" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number"
                             placeholder="w">
                         <span class="px-2">cm</span>
-                        <input id="rectangle-length" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text"
-                            placeholder="l">
+                        <input id="rectangle-length" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black"
+                            type="number" placeholder="l">
                     </div>
                     <button id="rectangle-btn"
                         class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
@@ -73,9 +73,9 @@
                         <p>Area (A) = b &#215; h</p>
                     </div>
                     <div class="text-center mb-8">
-                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="b">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number" placeholder="b">
                         <span class="px-2">cm</span>
-                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="h">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number" placeholder="h">
                     </div>
                     <button class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
                 </div>
@@ -87,9 +87,9 @@
                         <p>Area (A) = 0.5 &#215; b &#215; h</p>
                     </div>
                     <div class="text-center mb-8">
-                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="b">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number" placeholder="b">
                         <span class="px-2">cm</span>
-                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="h">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number" placeholder="h">
                     </div>
                     <button class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
                 </div>
@@ -101,9 +101,9 @@
                         <p>Area (A) = p &#215; b</p>
                     </div>
                     <div class="text-center mb-8">
-                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="p">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number" placeholder="p">
                         <span class="px-2">cm</span>
-                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="b">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number" placeholder="b">
                     </div>
                     <button class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
                 </div>
@@ -115,9 +115,9 @@
                         <p>Area (A) = &Pi; &#215; a &#215; b</p>
                     </div>
                     <div class="text-center mb-8">
-                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="a">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number" placeholder="a">
                         <span class="px-2">cm</span>
-                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="text" placeholder="b">
+                        <input class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number" placeholder="b">
                     </div>
                     <button class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
                 </div>
