all blog has been written

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         Genius</span></a>
             </div>
             <div class="navbar-end">
-                <a class="btn btn-info px-8 font-semibold text-white">Blog</a>
+                <button class="btn-info text-3xl px-8 py-2 font-bold text-white rounded-md">Blog</button>
             </div>
         </div>
     </header>
@@ -30,7 +30,7 @@
         <section class="md:flex gap-6 mt-10 px-10">
             <!-- Geometry section  -->
 
-            <div class="grid grid-col md:grid-cols-2 lg:grid-cols-3 gap-4 w-[70%]">
+            <div class="grid grid-col md:grid-cols-2 lg:grid-cols-3 gap-4 md:w-[70%]">
                 <!-- ! triangle  -->
                 <div class="card w-full bg-base-100 border border-lg px-10 py-8">
                     <figure><img src="./images/triangle.png" class="h-40 w-60" alt="triangle" /></figure>
@@ -136,7 +136,7 @@
             </div>
 
             <!-- ! area calculation section  -->
-            <div class="w-[30%]">
+            <div class="md:w-[30%] max-sm:mt-6">
                 <div class="bg-base-100 border border-lg px-6 py-8 h-[50%] rounded-lg">
                     <h2 class="text-3xl underline font-semibold text-center">Area Calculation</h2>
                     <div class="overflow-x-auto">
