--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         Genius</span></a>
             </div>
             <div class="navbar-end">
-                <button class="btn-info text-3xl px-8 py-2 font-bold text-white rounded-md">Blog</button>
+                <button id="blog-btn" class="btn-info text-3xl px-8 py-2 font-bold text-white rounded-md">Blog</button>
             </div>
         </div>
     </header>
@@ -156,6 +156,7 @@
     <!-- ! Javascript linked  -->
     <script src="./javascript/common.js"></script>
     <script src="./javascript/app.js"></script>
+    <script src="./javascript/blog.js"></script>
 </body>
 
 </html>
