--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <!-- navbar -->
         <div class="navbar w-[95%] bg-cyan-50 mx-auto mt-8 rounded-lg py-4 px-6">
             <div class="navbar-start">
-                <a class="font-bold text-4xl">Interactive<span class="font-medium text-slate-600	"><br>Geometry
+                <a class="font-bold text-2xl md:text-4xl">Interactive<span
+                        class="font-medium text-slate-600"><br>Geometry
                         Genius</span></a>
             </div>
             <div class="navbar-end">
@@ -30,7 +31,7 @@
         <section class="md:flex gap-6 mt-10 px-10">
             <!-- Geometry section  -->
 
-            <div class="grid grid-col md:grid-cols-2 lg:grid-cols-3 gap-4 md:w-[70%]">
+            <div class="md:grid grid-col md:grid-cols-2 lg:grid-cols-3 gap-4 md:w-[70%]">
                 <!-- ! triangle  -->
                 <div class="card w-full bg-base-100 border border-lg px-10 py-8">
                     <figure><img src="./images/triangle.png" class="h-40 w-60" alt="triangle" /></figure>
@@ -39,11 +40,11 @@
                         <p>Area (A) = 0.5 &#215; b &#215; h</p>
                     </div>
                     <div class="text-center mb-8">
-                        <input id="triangle-base" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number"
-                            placeholder="b">
+                        <input id="triangle-base" class="w-[30%] bg-[#F1F1F1] px-2 py-2 rounded text-black"
+                            type="number" placeholder="b">
                         <span class="px-2">cm</span>
-                        <input id="triangle-height" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number"
-                            placeholder="h">
+                        <input id="triangle-height" class="w-[30%] bg-[#F1F1F1] px-2 py-2 rounded text-black"
+                            type="number" placeholder="h">
                     </div>
                     <button id="triangle-btn"
                         class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
@@ -56,10 +57,10 @@
                         <p>Area (A) = w &#215; l</p>
                     </div>
                     <div class="text-center mb-8">
-                        <input id="rectangle-width" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number"
-                            placeholder="w">
+                        <input id="rectangle-width" class="w-[30%] bg-[#F1F1F1] px-2 py-2 rounded text-black"
+                            type="number" placeholder="w">
                         <span class="px-2">cm</span>
-                        <input id="rectangle-length" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black"
+                        <input id="rectangle-length" class="w-[30%] bg-[#F1F1F1] px-2 py-2 rounded text-black"
                             type="number" placeholder="l">
                     </div>
                     <button id="rectangle-btn"
@@ -73,10 +74,10 @@
                         <p>Area (A) = b &#215; h</p>
                     </div>
                     <div class="text-center mb-8">
-                        <input id="parallelogram-base" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black"
+                        <input id="parallelogram-base" class="w-[30%] bg-[#F1F1F1] px-2 py-2 rounded text-black"
                             type="number" placeholder="b">
                         <span class="px-2">cm</span>
-                        <input id="parallelogram-height" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black"
+                        <input id="parallelogram-height" class="w-[30%] bg-[#F1F1F1] px-2 py-2 rounded text-black"
                             type="number" placeholder="h">
                     </div>
                     <button id="parallelogram-btn"
@@ -90,11 +91,11 @@
                         <p>Area (A) = 0.5 &#215; b &#215; h</p>
                     </div>
                     <div class="text-center mb-8">
-                        <input id="rhombus-base" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number"
+                        <input id="rhombus-base" class="w-[30%] bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number"
                             placeholder="b">
                         <span class="px-2">cm</span>
-                        <input id="rhombus-height" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number"
-                            placeholder="h">
+                        <input id="rhombus-height" class="w-[30%] bg-[#F1F1F1] px-2 py-2 rounded text-black"
+                            type="number" placeholder="h">
                     </div>
                     <button id="rhombus-btn"
                         class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
@@ -107,10 +108,10 @@
                         <p>Area (A) = 0.5 &#215; p &#215; b</p>
                     </div>
                     <div class="text-center mb-8">
-                        <input id="pentagon-perimeter" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black"
+                        <input id="pentagon-perimeter" class="w-[30%] bg-[#F1F1F1] px-2 py-2 rounded text-black"
                             type="number" placeholder="p">
                         <span class="px-2">cm</span>
-                        <input id="pentagon-apothem " class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black"
+                        <input id="pentagon-apothem " class="w-[30%] bg-[#F1F1F1] px-2 py-2 rounded text-black"
                             type="number" placeholder="b">
                     </div>
                     <button id="pentagon-btn"
@@ -124,11 +125,11 @@
                         <p>Area (A) = &Pi; &#215; a &#215; b</p>
                     </div>
                     <div class="text-center mb-8">
-                        <input id="ellipse-x-axis" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number"
-                            placeholder="a">
+                        <input id="ellipse-x-axis" class="w-[30%] bg-[#F1F1F1] px-2 py-2 rounded text-black"
+                            type="number" placeholder="a">
                         <span class="px-2">cm</span>
-                        <input id="ellipse-y-axis" class="w-20 bg-[#F1F1F1] px-2 py-2 rounded text-black" type="number"
-                            placeholder="b">
+                        <input id="ellipse-y-axis" class="w-[30%] bg-[#F1F1F1] px-2 py-2 rounded text-black"
+                            type="number" placeholder="b">
                     </div>
                     <button id="ellipse-btn"
                         class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
@@ -137,7 +138,7 @@
 
             <!-- ! area calculation section  -->
             <div class="md:w-[30%] max-sm:mt-6">
-                <div class="bg-base-100 border border-lg px-6 py-8 h-[50%] rounded-lg">
+                <div class="bg-base-100 border border-lg md:px-6 py-8 md:h-[50%] max-sm:h-[200px] rounded-lg">
                     <h2 class="text-3xl underline font-semibold text-center">Area Calculation</h2>
                     <div class="overflow-x-auto">
                         <table class="table w-full">
