--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -16,7 +16,8 @@
         <!-- navbar -->
         <div class="navbar w-[95%] bg-cyan-50 mx-auto mt-8 rounded-lg py-4 px-6">
             <div class="navbar-start">
-                <a class="font-bold text-4xl">Interactive<span class="font-medium text-slate-600	"><br>Geometry
+                <a class="font-bold text-2xl md:text-4xl">Interactive<span
+                        class="font-medium text-slate-600	"><br>Geometry
                         Genius</span></a>
             </div>
             <div class="navbar-end">
@@ -26,6 +27,7 @@
     </header>
 
     <main>
+        <!-- Question and answer section  -->
         <section class="mt-12 md:w-[90%] mx-auto">
             <div class="grid grid-col md:grid-cols-2 gap-10">
                 <div class="card card-compact w-full bg-base-100 shadow-xl">
@@ -91,7 +93,11 @@
             </div>
         </section>
     </main>
+    <footer class="mt-8 bg-red-200 py-6 px-2 text-center">
+        <p>&copy; by Geometry-Area-Calculation</p>
+    </footer>
 
+    <!-- js linked -->
     <script src="./javascript/blog.js"></script>
 </body>
 
