blog responsive fixed

--- a/blog.html
+++ b/blog.html
@@ -29,8 +29,8 @@
     <main>
         <!-- Question and answer section  -->
         <section class="mt-12 md:w-[90%] mx-auto">
-            <div class="grid grid-col md:grid-cols-2 gap-10">
-                <div class="card card-compact w-full bg-base-100 shadow-xl">
+            <div class="md:grid grid-col md:grid-cols-2 gap-10">
+                <div class="card card-compact w-full bg-base-100 shadow-md mb-8">
                     <div class="card-body">
                         <h2 class="text-3xl font-semibold text-red-500">What is DOM? What is the purpose of DOM?</h2>
                         <p class="text-2xl">Document Object Model simply DOM is programming interface for web documents
@@ -43,11 +43,11 @@
                             we need to work with DOM.</p>
                     </div>
                 </div>
-                <div class="card card-compact w-full bg-base-100 shadow-xl">
+                <div class="card card-compact w-full bg-base-100 shadow-md mb-8">
                     <div class="card-body">
                         <h2 class="text-3xl font-semibold text-red-500">How we will select elements using DOM?</h2>
                         <p class="text-2xl">Easiest way to select an elements from html using DOM is getElementById
-                            selector. There are 5 ways to select elements using DOM.
+                            selector. There are 5 ways to select elements using DOM. <br>
                             1. getElementsByTagName()
                             2. getElementsByClassName()
                             3. getElementById()
@@ -62,7 +62,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card card-compact w-full bg-base-100 shadow-xl">
+                <div class="card card-compact w-full bg-base-100 shadow-md mb-8">
                     <div class="card-body">
                         <h2 class="text-3xl font-semibold text-red-500">What is event bubble?</h2>
                         <p class="text-2xl">
@@ -76,7 +76,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card card-compact w-full bg-base-100 shadow-xl">
+                <div class="card card-compact w-full bg-base-100 shadow-md mb-8">
                     <div class="card-body">
                         <h2 class="text-3xl font-semibold text-red-500">What is callback function? Why we will use it?
                         </h2>
