add some style for look more better

--- a/blog.html
+++ b/blog.html
@@ -17,11 +17,11 @@
         <div class="navbar w-[95%] bg-cyan-50 mx-auto mt-8 rounded-lg py-4 px-6">
             <div class="navbar-start">
                 <a class="font-bold text-2xl md:text-4xl">Interactive<span
-                        class="font-medium text-slate-600"><br>Geometry
+                        class="max-sm:font-normal font-medium max-sm:text-xl text-slate-600"><br>Geometry
                         Genius</span></a>
             </div>
             <div class="navbar-end">
-                <button id="home-btn" class="btn-info text-3xl px-8 py-2 font-bold text-white rounded-md">Home</button>
+                <button id="home-btn" class="btn-info text-xl px-8 py-2 font-bold text-white rounded-md">Home</button>
             </div>
         </div>
     </header>
@@ -30,10 +30,11 @@
         <!-- Question and answer section  -->
         <section class="mt-12 md:w-[90%] mx-auto">
             <div class="md:grid grid-col md:grid-cols-2 gap-10">
+                <!-- question 1  -->
                 <div class="card card-compact w-full bg-base-100 shadow-md mb-8">
                     <div class="card-body">
                         <h2 class="text-3xl font-semibold text-red-500">What is DOM? What is the purpose of DOM?</h2>
-                        <p class="text-2xl">Document Object Model simply DOM is programming interface for web documents
+                        <p class="text-lg">Document Object Model simply DOM is programming interface for web documents
                             like html and
                             xml.
                             When a webpage loaded, it create a document object model. It's design look likes a tree. It
@@ -43,10 +44,11 @@
                             we need to work with DOM.</p>
                     </div>
                 </div>
+                <!-- question 2  -->
                 <div class="card card-compact w-full bg-base-100 shadow-md mb-8">
                     <div class="card-body">
                         <h2 class="text-3xl font-semibold text-red-500">How we will select elements using DOM?</h2>
-                        <p class="text-2xl">Easiest way to select an elements from html using DOM is getElementById
+                        <p class="text-lg">Easiest way to select an elements from html using DOM is getElementById
                             selector. There are 5 ways to select elements using DOM. <br>
                             1. getElementsByTagName()
                             2. getElementsByClassName()
@@ -62,10 +64,11 @@
                         </p>
                     </div>
                 </div>
+                <!-- question 3  -->
                 <div class="card card-compact w-full bg-base-100 shadow-md mb-8">
                     <div class="card-body">
                         <h2 class="text-3xl font-semibold text-red-500">What is event bubble?</h2>
-                        <p class="text-2xl">
+                        <p class="text-lg">
                             Event bubble is the concept of DOM(Document Object Model). There are many events in DOM and
                             html elements receive them. Event bubble one of them.
                             Event bubble happen when a html element receive an event like click, mouseover, scroll, blur
@@ -76,11 +79,12 @@
                         </p>
                     </div>
                 </div>
+                <!-- question 4  -->
                 <div class="card card-compact w-full bg-base-100 shadow-md mb-8">
                     <div class="card-body">
                         <h2 class="text-3xl font-semibold text-red-500">What is callback function? Why we will use it?
                         </h2>
-                        <p class="text-2xl">
+                        <p class="text-lg">
                             When a function takes a function as argument its called callback function. In short, it is a
                             function that is executed after another function is executed.
                             We know the javascript asynchronous behavior. When a function or a statement takes more time
