--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div class="navbar w-[95%] bg-cyan-50 mx-auto mt-8 rounded-lg py-4 px-6">
             <div class="navbar-start">
                 <a class="font-bold text-2xl md:text-4xl">Interactive<span
-                        class="font-medium text-slate-600"><br>Geometry
+                        class="max-sm:font-normal font-medium max-sm:text-xl text-slate-600"><br>Geometry
                         Genius</span></a>
             </div>
             <div class="navbar-end">
-                <button id="blog-btn" class="btn-info text-3xl px-8 py-2 font-bold text-white rounded-md">Blog</button>
+                <button id="blog-btn" class="btn-info text-xl px-8 py-2 font-bold text-white rounded-md">Blog</button>
             </div>
         </div>
     </header>
@@ -143,18 +143,18 @@
                             type="number" placeholder="b">
                     </div>
                     <button id="ellipse-btn"
-                        class="btn-info rounded-md py-4 text-2xl font-bold text-white">Calculate</button>
+                        class="btn-info rounded-md py-4 text-2xl font-bold text-white ">Calculate</button>
                 </div>
             </div>
 
             <!-- ! area calculation section  -->
             <div class="md:w-[30%] max-sm:mt-6">
-                <div class="bg-base-100 border border-lg md:px-6 py-8 md:h-[100%] max-sm:h-80 rounded-lg">
+                <div class="bg-base-100 border border-lg md:px-6 pt-8 pb-16 h-[100%] rounded-lg">
                     <h2 class="text-3xl underline font-semibold text-center">Area Calculation</h2>
                     <div class="overflow-x-auto">
-                        <table class="table w-full">
+                        <table class="table w-full h-auto">
                             <tbody id="show-data">
-
+                                <!-- showing calculated data here  -->
                             </tbody>
                         </table>
                     </div>
