--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div onmouseover="randomBgColor(this)" onmouseout="normalBg(this)"
                     class="card w-full bg-base-100 border border-lg px-10 py-8 mb-4">
                     <figure><img src="./images/triangle.png" class="h-40 w-60" alt="triangle" /></figure>
-                    <div class="card-body text-center">
+                    <div class="card-body text-center px-1 px-1">
                         <h2 id="triangle-title" class="font-bold text-2xl">Triangle</h2>
                         <p>Area (A) = 0.5 &#215; b &#215; h</p>
                     </div>
@@ -59,7 +59,7 @@
                 <div onmouseover="randomBgColor(this)" onmouseout="normalBg(this)"
                     class="card w-full bg-base-100 border border-lg px-10 py-8 mb-4">
                     <figure><img src="./images/rectangle.png" class="h-40 w-60" alt="Parallelogram" /></figure>
-                    <div class="card-body text-center">
+                    <div class="card-body text-center px-1">
                         <h2 id="rectangle-title" class="font-bold text-2xl">Rectangle</h2>
                         <p>Area (A) = w &#215; l</p>
                     </div>
@@ -77,7 +77,7 @@
                 <div onmouseover="randomBgColor(this)" onmouseout="normalBg(this)"
                     class="card w-full bg-base-100 border border-lg px-10 py-8 mb-4">
                     <figure><img src="./images/parallelogram.png" class="h-40 w-60" alt="Parallelogram" /></figure>
-                    <div class="card-body text-center">
+                    <div class="card-body text-center px-1">
                         <h2 id="parallelogram-title" class="font-bold text-2xl">Parallelogram</h2>
                         <p>Area (A) = b &#215; h</p>
                     </div>
@@ -95,7 +95,7 @@
                 <div onmouseover="randomBgColor(this)" onmouseout="normalBg(this)"
                     class="card w-full bg-base-100 border border-lg px-10 py-8 mb-4">
                     <figure><img src="./images/rhombus.png" class="h-40 w-60" alt="Rhombus" /></figure>
-                    <div class="card-body text-center">
+                    <div class="card-body text-center px-1">
                         <h2 id="rhombus-title" class="font-bold text-2xl">Rhombus</h2>
                         <p>Area (A) = 0.5 &#215; b &#215; h</p>
                     </div>
@@ -113,7 +113,7 @@
                 <div onmouseover="randomBgColor(this)" onmouseout="normalBg(this)"
                     class="card w-full bg-base-100 border border-lg px-10 py-8 mb-4">
                     <figure><img src="./images/pentagon.png" class="h-40 w-60" alt="Pentagon" /></figure>
-                    <div class="card-body text-center">
+                    <div class="card-body text-center px-1">
                         <h2 id="pentagon-title" class="font-bold text-2xl">Pentagon</h2>
                         <p>Area (A) = 0.5 &#215; p &#215; b</p>
                     </div>
@@ -131,7 +131,7 @@
                 <div onmouseover="randomBgColor(this)" onmouseout="normalBg(this)"
                     class="card w-full bg-base-100 border border-lg px-10 py-8 mb-4">
                     <figure><img src="./images/ellipse.png" class="h-40 w-60" alt="Ellipse" /></figure>
-                    <div class="card-body text-center">
+                    <div class="card-body text-center px-1">
                         <h2 id="ellipse-title" class="font-bold text-2xl">Ellipse</h2>
                         <p>Area (A) = &Pi; &#215; a &#215; b</p>
                     </div>
